# groonga-function-snippet_tritonn

./: Makefile.am  README.md  configure.ac
function/: Makefile.am  snippet_tritonn.am  snippet_tritonn.c  snippet_tritonn.la
functions/: Makefile.am  snippet_tritonn.c
test/suite/: empty_column.expected  empty_column.test  empty_query.expected  empty_query.test  html_escape_off.expected  html_escape_off.test  html_escape_on.expected  html_escape_on.test  leading_space_off.expected  leading_space_off.test  leading_space_on.expected  length_long.test  length_short.test  max_results_one.expected  max_results_one.test  max_results_twice.expected  max_results_twice.test  normalizer_auto.expected  normalizer_auto.test  normalizer_none.expected  normalizer_none.test  normalizer_unicode_ci.actual  normalizer_unicode_ci.test  normalizer_unicode_ci_except.actual  normalizer_unicode_ci_except.test  tag_both.test  tag_head.expected  tag_head.test  tag_none.expected  tag_none.test  tag_rear.expected  tag_rear.test  word_one.expected  word_one.test  word_twice.expected  word_twice.test
